<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_holo"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.shiqian.youknowme.LoginOrRegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/behappy"
        android:textColor="@color/white"
        android:textSize="@dimen/huge_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:id="@+id/login_or_register_btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/green_holo"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/huge_text" />

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"
            android:background="@null" />

        <Button
            android:id="@+id/login_or_register_btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/white"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="@dimen/huge_text" />

    </LinearLayout>

</LinearLayout>
